objects/Entities__c.object
<CustomObject>
    <fields>
        <fullName>AccName__c</fullName>
        <label>AccName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountCHQ__c</fullName>
        <formula>IF( CONTAINS( Primary_Client__r.Corporate_Headquarters__c, &quot;Nexus&quot;), &quot;Corporate Headquarters&quot;, 
IF( CONTAINS( Primary_Client__r.Corporate_Headquarters__c, &quot;MailForwarding&quot;), &quot;Mail Forwarding&quot;, &quot;None&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountCHQ</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Entities (Account)</relationshipLabel>
        <relationshipName>Entities3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Plan_Sponsors__c</fullName>
        <label>Additional Plan Sponsors</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Address_of_Entity_Holding_Assignment__c</fullName>
        <label>Address of Entity Holding Assignment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_of_Property_being_Transferred__c</fullName>
        <label>Address of Property being Transferred</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admin_Dissolution_Date__c</fullName>
        <description>Date Entity was dissolved by the State</description>
        <label>Admin Dissolution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Advisor__c</fullName>
        <label>Advisor</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Name__c</fullName>
        <description>Alternate name selected</description>
        <label>Alternate Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Anderson_Prepared_Deed__c</fullName>
        <description>Yes or No picklist updating when deed is prepared by Anderson.</description>
        <label>Anderson Prepared Deed?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>--None--</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Anderson_s_Nevada_or_Wyoming_nexus__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Anderson&apos;s Nevada or Wyoming nexus</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Anonymity_LLC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Anonymity LLC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Articles_Prepared__c</fullName>
        <label>Articles Prepared</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Articles_Received_By_ALG__c</fullName>
        <label>Articles Received By ALG</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Articles_Received_From_State__c</fullName>
        <label>Articles Received From State</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Articles_Sent__c</fullName>
        <label>Articles Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Articles_Sent_to_Rcv_d__c</fullName>
        <description>Days from date articles are sent to the state to the date they are returned</description>
        <formula>Articles_Received_From_State__c  -  Articles_Sent__c</formula>
        <label>Days to get Articles from State</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assigned_Paralegal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Assigned Paralegal for Living Trust.</description>
        <inlineHelpText>This is the Assigned Paralegal for the Living Trust.</inlineHelpText>
        <label>Assigned Paralegal</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Entities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigning_the_Beneficiary_Interest__c</fullName>
        <label>Assigning the Beneficiary Interest?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AttorneyAssigned2__c</fullName>
        <formula>TEXT( Case__r.Attorney_Assigned__c )</formula>
        <label>AttorneyAssigned2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Base_URL_LLC__c</fullName>
        <formula>IMAGE(&quot;https://andersonadvisors--c.na132.visual.force.com/&quot; + Organizer_Signature_Field__c, &quot;Organizer Signature&quot;, 75, 150)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Base URL LLC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Base_URL__c</fullName>
        <formula>IMAGE(&quot;https://andersonadvisors--c.na132.visual.force.com/&quot; + Processor_Signature_Field__c, &quot;Processor Signature&quot;, 75, 150)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Base URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BinderDocState__c</fullName>
        <formula>CASE( Organization_State__c,
&quot;Alabama&quot;, $Label.BinderDocAlabama,
&quot;Alaska&quot;, $Label.BinderDocAlaska,
&quot;Arizona&quot;, $Label.BinderDocArizona,
&quot;Arkansas&quot;, $Label.BinderDocArkansas,
&quot;California&quot;, $Label.BinderDocCalifornia,
&quot;Colorado&quot;, $Label.BinderDocColorado,
&quot;Connecticut&quot;, $Label.BinderDocConnecticut,
&quot;Delaware&quot;, $Label.BinderDocDelaware,
&quot;District of Columbia&quot;, $Label.BinderDocDC,
&quot;Florida&quot;, $Label.BinderDocFlorida,
&quot;Georgia&quot;, $Label.BinderDocGeorgia,
&quot;Hawaii&quot;, $Label.BinderDocHawaii,
&quot;Idaho&quot;, $Label.BinderDocIdaho,
&quot;Illinois&quot;, $Label.BinderDocIllinois,
&quot;Indiana&quot;, $Label.BinderDocIndiana,
&quot;Iowa&quot;, $Label.BinderDocIowa,
&quot;Kansas&quot;, $Label.BinderDocKansas,
&quot;Kentucky&quot;, $Label.BinderDocKentucky,
&quot;Louisiana&quot;, $Label.BinderDocLouisiana,
&quot;Maine&quot;, $Label.BinderDocMainer,
&quot;Maryland&quot;, $Label.BinderDocMaryland,
&quot;Massachusetts&quot;, $Label.BinderDocMassachusetts,
&quot;Michigan&quot;, $Label.BinderDocMichigan,
&quot;Minnesota&quot;, $Label.BinderDocMinnesota,
&quot;Mississippi&quot;, $Label.BinderDocMississippi,
&quot;Missouri&quot;, $Label.BinderDocMissouri,
&quot;Montana&quot;, $Label.BinderDocMontana,
&quot;Nebraska&quot;, $Label.BinderDocNebraska,
&quot;Nevada&quot;, $Label.BinderDocNevada,
&quot;New Hampshire&quot;, $Label.BinderDocNewHampshire,
&quot;New Jersey&quot;, $Label.BinderDocNewJersey,
&quot;New Mexico&quot;, $Label.BinderDocNewMexico,
&quot;New York&quot;, $Label.BinderDocNewYork,
&quot;North Carolina&quot;, $Label.BinderDocNorthCarolina,
&quot;North Dakota&quot;, $Label.BinderDocNorthDakota,
&quot;Ohio&quot;, $Label.BinderDocOhio,
&quot;Oklahoma&quot;, $Label.BinderDocOklahoma,
&quot;Oregon&quot;, $Label.BinderDocOregon,
&quot;Pennsylvania&quot;, $Label.BinderDocPennsylvania,
&quot;Rhode Island&quot;, $Label.BinderDocRhodeIsland, 
&quot;South Carolina&quot;, $Label.BinderDocSouthCarolina,
&quot;South Dakota&quot;, $Label.BinderDocSouthDakota, 
&quot;Tennessee&quot;, $Label.BinderDocTennessee,
&quot;Texas&quot;, $Label.BinderDocTexas,
&quot;Utah&quot;, $Label.BinderDocUtah,
&quot;Vermont&quot;, $Label.BinderDocVermont,
&quot;Virginia&quot;, $Label.BinderDocVirginia,
&quot;Washington&quot;, $Label.BinderDocWashington, 
&quot;West Virginia&quot;, $Label.BinderDocWestVirginia,
&quot;Wisconsin&quot;, $Label.BinderDocWisconsin,
&quot;Wyoming&quot;, $Label.BinderDocWyoming,
&quot;-&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BinderDocState</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Binder_Reprint__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Binder Reprint</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bookkeeping_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Field used to relate the entity to the Bookkeeping Case.  Only use this with Bookkeeping Cases, no other Case Types.</inlineHelpText>
        <label>Bookkeeping Case</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Case.Account.Id</field>
                <operation>equals</operation>
                <valueField>$Source.Primary_Client__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Entities (Bookkeeping Case)</relationshipLabel>
        <relationshipName>Entities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Address_2__c</fullName>
        <formula>Plan_Sponsor__r.Business_Location__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Address__c</fullName>
        <label>Business Address</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Corp HQ</fullName>
                    <label>CAP</label>
                </value>
                <value>
                    <fullName>Client Address</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>RA Address</fullName>
                </value>
                <value>
                    <fullName>Wyoming</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_City__c</fullName>
        <label>Business City</label>
        <length>152</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_County__c</fullName>
        <label>Business County</label>
        <length>152</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Location__c</fullName>
        <label>Business Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Business_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>When this entity is not owned by the primary client listed above, select a contact from this Client&apos;s account page who is the owner, and put their name here.</inlineHelpText>
        <label>Business Owner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Entities</relationshipLabel>
        <relationshipName>Entities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Purpose_2__c</fullName>
        <label>Business Purpose</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Currency Investing</fullName>
                </value>
                <value>
                    <fullName>Flips - Real Estate</fullName>
                </value>
                <value>
                    <fullName>Holding</fullName>
                </value>
                <value>
                    <fullName>Management</fullName>
                </value>
                <value>
                    <fullName>Rentals - Real Estate</fullName>
                </value>
                <value>
                    <fullName>Trading</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Opportunity Zone</fullName>
                </value>
                <value>
                    <fullName>Nominee Trustee</fullName>
                </value>
                <value>
                    <fullName>Brokerage Accounts Savings</fullName>
                </value>
                <value>
                    <fullName>Short Term Rental</fullName>
                </value>
                <value>
                    <fullName>Long Term Rental</fullName>
                </value>
                <value>
                    <fullName>Personal Residence</fullName>
                </value>
                <value>
                    <fullName>Cryptocurrency</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Purpose__c</fullName>
        <label>Other Business Purpose</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CA_SoI_WF__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CA SoI WF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CaseClientMatch__c</fullName>
        <formula>IF(AND(NOT(ISBLANK(Case__c)),Case__r.AccountId  &lt;&gt;  Primary_Client__r.Id), &quot;FALSE&quot;, &quot;TRUE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CaseClientMatch</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Owner2__c</fullName>
        <formula>Case__r.Owner:User.FirstName &amp; &quot; &quot; &amp; Case__r.Owner:User.LastName</formula>
        <label>Case Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Entities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Case.Account.Id</field>
                <operation>equals</operation>
                <valueField>$Source.Primary_Client__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Entities</relationshipLabel>
        <relationshipName>Entities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Certs_Ledgers_Workflow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Certs &amp; Ledgers Workflow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Charitable_Purpose__c</fullName>
        <label>Charitable Purpose</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Alternate_Name__c</fullName>
        <label>Client Alternate Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Email_Formula__c</fullName>
        <formula>Primary_Client__r.E_Mail__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Home_State__c</fullName>
        <label>Client Home State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>US_States</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Completed_Consult__c</fullName>
        <description>Did the attorney complete the scheduled consultation</description>
        <label>Completed Consult</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Conductor_Pension_Admin_PSP__c</fullName>
        <formula>&quot;&amp;id=&quot; + Id +
&quot;&amp;defaultpdf=1&quot; + 
&quot;&amp;apdf=0&quot; + 
&quot;&amp;templategroup=Pension&quot; +
&quot;&amp;TemplateID=a0z0B00000FXbzF&quot; + 
&quot;&amp;queryid=[account]a100B00000DJ4jZ,[SH1]a100B00000DHkoK,[SH2]a100B00000DHksG,[SH3]a100B00000DHksa,[SH4]a100B00000DHkwh,[Dir1]a100B00000DHkwr,[Dir2]a100B00000DHl1F,[Dir3]a100B00000DHkxW,[Dir4]a100B00000DHkxb,[Dir5]a100B00000DHkxg,[Dir6]a100B00000DHkxl,[trustee]a100B00000Gy3Km&quot; + 
&quot;&amp;reportid=[Account1]00O0B000003Sefw&quot; + 
&quot;&amp;emailadditionalto=&quot; +  Primary_Client__r.E_Mail__c  + &apos;,&apos; +  Primary_Client__r.Other_E_Mail__c + 
&quot;&amp;EmailBCC=&quot; + &apos;swallace@andersonadvisors.com&apos; +
&quot;&amp;qvar0id=a10U0000003J6np &quot; + 
&quot;&amp;ofn={Template.label}&quot; +
&quot;&amp;cetid=a0y0B00000BX9xj&quot; +
&quot;&amp;lg4=1&quot; + 
&quot;&amp;ds3=0&quot; + 
&quot;&amp;qmode=SendEmail&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conductor Pension Admin PSP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CongaEmail__c</fullName>
        <formula>Primary_Client__r.E_Mail__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CongaEmail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CongaLLCAct__c</fullName>
        <formula>CASE( Organization_State__c,
&quot;Texas&quot;, $Label.TXAct,
&quot;Alabama&quot;, $Label.ALAct,
&quot;Alaska&quot;, $Label.AKAct,
&quot;Arkansas&quot;, $Label.ARAct,
&quot;California&quot;, $Label.CAAct,
&quot;Delaware&quot;, $Label.DEAct,
&quot;District of Columbia&quot;, $Label.DCAct,
&quot;Florida&quot;, $Label.FLAct,
&quot;Hawaii&quot;, $Label.HIAct,
&quot;Idaho&quot;, $Label.IDAct,
&quot;Indiana&quot;, $Label.INAct,
&quot;Iowa&quot;, $Label.IAAct,
&quot;Kansas&quot;, $Label.KSAct,
&quot;Massachusetts&quot;, $Label.MAAct,
&quot;Minnesota&quot;, $Label.MNAct,
&quot;Mississippi&quot;, $Label.MSAct,
&quot;Nebraska&quot;, $Label.NEAct,
&quot;New Hampshire&quot;, $Label.NHAct,
&quot;New Jersey&quot;, $Label.NJAct,
&quot;New York&quot;, $Label.NYAct,
&quot;North Dakota&quot;, $Label.NDAct,
&quot;Pennsylvania&quot;, $Label.PAAct,
&quot;South Carolina&quot;, $Label.SCAct,
&quot;Utah&quot;, $Label.UTAct,
&quot;West Virginia&quot;, $Label.WVAct,
$Label.LLCACT)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CongaLLCAct</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CongaLLCAdmission__c</fullName>
        <formula>CASE( Organization_State__c,
&quot;Alabama&quot;,  &quot;Code of Ala. § 10A-5A-4.01&quot;,
&quot;Alaska&quot;, &quot;Alaska Stat. § 10.50.160&quot;,
&quot;Arizona&quot;, &quot;A.R.S. § 29-731&quot;,
&quot;Arkansas&quot;, &quot;A.C.A. § 4-32-801&quot;,
&quot;California&quot;, &quot;Cal Corp Code § 17704.01&quot;,
&quot;Colorado&quot;, &quot;C.R.S. 7-80-701&quot;,
&quot;Connecticut&quot;, &quot;Conn. Gen. Stat. § 34-255&quot;,
&quot;Delaware&quot;, &quot;6 Del. C. § 18-301&quot;,
&quot;District of Columbia&quot;, &quot;D.C. Code § 29-804.01&quot;,
&quot;Florida&quot;, &quot;Fla. Stat. § 605.0401&quot;,
&quot;Georgia&quot;, &quot;O.C.G.A. § 14-11-505&quot;,
&quot;Hawaii&quot;, &quot;HRS § 428-404&quot;,
&quot;Idaho&quot;, &quot;Idaho Code § 30-25-401&quot;,
&quot;Illinois&quot;, &quot;805 ILCS 180/10-1&quot;,
&quot;Indiana&quot;, &quot;Burns Ind. Code Ann. § 23-18-6-1&quot;,
&quot;Iowa&quot;, &quot;Iowa Code § 489.401&quot;,
&quot;Kansas&quot;, &quot;K.S.A. § 17-7686&quot;,
&quot;Kentucky&quot;, &quot;KRS § 275.275.&quot;,
&quot;Louisiana&quot;, &quot;La. R.S. § 12:1318&quot;,
&quot;Maine&quot;, &quot;31 M.R.S. § 1551&quot;,
&quot;Maryland&quot;, &quot;Md. CORPORATIONS AND ASSOCIATIONS Code Ann. § 4A-601&quot;,
&quot;Massachusetts&quot;, &quot;ALM GL ch. 156C, § 20&quot;,
&quot;Michigan&quot;, &quot;MCLS § 450.4501&quot;,
&quot;Minnesota&quot;, &quot;Minn. Stat. § 322C.0401&quot;,
&quot;Mississippi&quot;, &quot;Miss. Code Ann. § 79-29-301&quot;,
&quot;Missouri&quot;, &quot;§ 347.113 R.S.Mo.&quot;,
&quot;Montana&quot;, &quot;35-8-302, MCA.&quot;,
&quot;Nebraska&quot;, &quot;R.R.S. Neb. § 21-130&quot;,
&quot;Nevada&quot;, &quot;Nev. Rev. Stat. Ann. § 86.326&quot;,
&quot;New Hampshire&quot;, &quot;RSA 304-C:53&quot;,
&quot;New Jersey&quot;, &quot;N.J. Stat. § 42:2C-31&quot;,
&quot;New Mexico&quot;, &quot;N.M. Stat. Ann. § 53-19-36&quot;,
&quot;New York&quot;, &quot;NY CLS LLC § 602&quot;,
&quot;North Carolina&quot;, &quot;N.C. Gen. Stat. § 57D-3-01&quot;,
&quot;North Dakota&quot;, &quot;N.D. Cent. Code, § 10-32.1-27&quot;,
&quot;Ohio&quot;, &quot;ORC Ann. 1705.14&quot;,
&quot;Oklahoma&quot;, &quot;18 Okl. St. § 2020&quot;,
&quot;Oregon&quot;, &quot;ORS § 63.245&quot;,
&quot;Pennsylvania&quot;, &quot;15 Pa.C.S. § 8841&quot;,
&quot;Rhode Island&quot;, &quot;R.I. Gen. Laws § 7-16-21&quot;,
&quot;South Carolina&quot;, &quot;S.C. Code Ann. § 33-44-404&quot;,
&quot;South Dakota&quot;, &quot;S.D. Codified Laws § 47-34A-401&quot;,
&quot;Tennessee&quot;, &quot;Tenn. Code Ann. § 48-249-501&quot;,
&quot;Texas&quot;, &quot;Tex. Business Organizations Code § 101.105&quot;,
&quot;Utah&quot;, &quot;Utah Code Ann. § 48-3a-401&quot;,
&quot;Vermont&quot;, &quot;11 V.S.A. § 4051&quot;,
&quot;Virginia&quot;, &quot;Va. Code Ann. § 13.1-1038.1&quot;,
&quot;Washington&quot;, &quot;Rev. Code Wash. (RCW) § 25.15.116&quot;,
&quot;West Virginia&quot;, &quot;W. Va. Code § 31B-4-404&quot;,
&quot;Wisconsin&quot;, &quot;Wis. Stat. § 183.0801&quot;,
&quot;Wyoming&quot;, &quot;Wyo. Stat. § 17-29-401&quot;,
&quot;-&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CongaLLCAdmission</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CongaLLCBinderMem__c</fullName>
        <description>Used for paragraph description on docs. Different from Member Count.</description>
        <formula>IF(ISBLANK(Member_1__c)&amp;&amp; 
ISBLANK(Member_2__c)&amp;&amp; 
ISBLANK(Member_3__c)&amp;&amp; 
ISBLANK(Member_4__c)&amp;&amp; 
ISBLANK(Member_5__c)&amp;&amp; 
ISBLANK(Entity_Member_2__c)&amp;&amp; 
NOT(ISBLANK(Entity_Member_1__c)), &quot;1&quot;, 
NULL) 

&amp; 

IF(ISBLANK(Member_2__c)&amp;&amp; 
ISBLANK(Member_3__c)&amp;&amp; 
ISBLANK(Member_4__c)&amp;&amp; 
ISBLANK(Member_5__c)&amp;&amp; 
ISBLANK(Entity_Member_1__c)&amp;&amp; 
ISBLANK(Entity_Member_2__c)&amp;&amp; 
NOT(ISBLANK(Member_1__c)), &quot;1&quot;, 
NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Do not delete.</inlineHelpText>
        <label>CongaLLCBinderMem</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CongaLLCBooks__c</fullName>
        <formula>CASE( Organization_State__c,
&quot;Alabama&quot;,  &quot;Code of Ala. § 10A-5A-4.09&quot;,
&quot;Alaska&quot;, &quot;Alaska Stat. § 10.50.860&quot;,
&quot;Arizona&quot;, &quot;A.R.S. § 29-607&quot;,
&quot;Arkansas&quot;, &quot;A.C.A. § 4-32-405&quot;,
&quot;California&quot;, &quot;Cal Corp Code § 17702.03&quot;,
&quot;Colorado&quot;, &quot;C.R.S. 7-80-408&quot;,
&quot;Connecticut&quot;, &quot;Conn. Gen. Stat. § 34-255i&quot;,
&quot;Delaware&quot;, &quot;6 Del. C. § 18-305&quot;,
&quot;District of Columbia&quot;, &quot;D.C. Code § 29-804.10&quot;,
&quot;Florida&quot;, &quot;Fla. Stat. § 605.0410&quot;,
&quot;Georgia&quot;, &quot;O.C.G.A. § 14-11-313.&quot;,
&quot;Hawaii&quot;, &quot;HRS § 428-408&quot;,
&quot;Idaho&quot;, &quot;Idaho Code § 30-25-410&quot;,
&quot;Illinois&quot;, &quot;805 ILCS 180/1-40&quot;,
&quot;Indiana&quot;, &quot;Burns Ind. Code Ann. § 23-18-4-8&quot;,
&quot;Iowa&quot;, &quot;Iowa Code § 489.410&quot;,
&quot;Kansas&quot;, &quot;K.S.A. § 17-7690&quot;,
&quot;Kentucky&quot;, &quot;KRS § 275.185&quot;,
&quot;Louisiana&quot;, &quot;La. R.S. § 12:1319&quot;,
&quot;Maine&quot;, &quot;31 M.R.S. § 1558&quot;,
&quot;Maryland&quot;, &quot;Md. CORPORATIONS AND ASSOCIATIONS Code Ann. § 4A-406&quot;,
&quot;Massachusetts&quot;, &quot;ALM GL ch. 156C, § 9&quot;,
&quot;Michigan&quot;, &quot;MCLS § 450.4213&quot;,
&quot;Minnesota&quot;, &quot;Minn. Stat. § 322C.0410&quot;,
&quot;Mississippi&quot;, &quot;Miss. Code Ann. § 79-29-115&quot;,
&quot;Missouri&quot;, &quot;§ 347.091 R.S.Mo.&quot;,
&quot;Montana&quot;, &quot;35-8-405, MCA&quot;,
&quot;Nebraska&quot;, &quot;R.R.S. Neb. § 21-139&quot;,
&quot;Nevada&quot;, &quot;Nev. Rev. Stat. Ann. § 86.241&quot;,
&quot;New Hampshire&quot;, &quot;RSA 304-C:55&quot;,
&quot;New Jersey&quot;, &quot;N.J. Stat. § 42:2C-40&quot;,
&quot;New Mexico&quot;, &quot;N.M. Stat. Ann. § 53-19-19&quot;,
&quot;New York&quot;, &quot;NY CLS LLC § 1102&quot;,
&quot;North Carolina&quot;, &quot;N.C. Gen. Stat. § 57D-3-04&quot;,
&quot;North Dakota&quot;, &quot;N.D. Cent. Code, § 10-32.1-42&quot;,
&quot;Ohio&quot;, &quot;ORC Ann. 1705.28&quot;,
&quot;Oklahoma&quot;, &quot;18 Okl. St. § 2021&quot;,
&quot;Oregon&quot;, &quot;ORS § 63.771&quot;,
&quot;Pennsylvania&quot;, &quot;15 Pa.C.S. § 8850&quot;,
&quot;Rhode Island&quot;, &quot;R.I. Gen. Laws § 7-16-22&quot;,
&quot;South Carolina&quot;, &quot;S.C. Code Ann. § 33-44-408&quot;,
&quot;South Dakota&quot;, &quot;S.D. Codified Laws § 47-34A-408&quot;,
&quot;Tennessee&quot;, &quot;Tenn. Code Ann. § 48-249-406&quot;,
&quot;Texas&quot;, &quot;Tex. Business Organizations Code § 3.151&quot;,
&quot;Utah&quot;, &quot;Utah Code Ann. § 48-3a-410&quot;,
&quot;Vermont&quot;, &quot;11 V.S.A. § 4058&quot;,
&quot;Virginia&quot;, &quot;Va. Code Ann. § 13.1-1028&quot;,
&quot;Washington&quot;, &quot;Rev. Code Wash. (RCW) § 25.15.136&quot;,
&quot;West Virginia&quot;, &quot;W. Va. Code § 31B-4-408&quot;,
&quot;Wisconsin&quot;, &quot;Wis. Stat. § 183.0405&quot;,
&quot;Wyoming&quot;, &quot;Wyo. Stat. § 17-29-410&quot;,
&quot;-&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CongaLLCBooks</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CongaLLCChargingOrder__c</fullName>
        <formula>CASE( Organization_State__c,
&quot;Alabama&quot;, &quot;Code of Ala. § 10A-5A-5.03&quot;,
&quot;Alaska&quot;, &quot;Alaska Stat. § 10.50.380&quot;,
&quot;Arizona&quot;, &quot;A.R.S. § 29-655&quot;,
&quot;Arkansas&quot;, &quot;A.C.A. § 4-32-705&quot;,
&quot;California&quot;, &quot;Cal Corp Code § 17705.03&quot;,
&quot;Colorado&quot;, &quot;C.R.S. 7-80-703&quot;,
&quot;Connecticut&quot;, &quot;Conn. Gen. Stat. § 34-259b&quot;,
&quot;Delaware&quot;, &quot;6 Del. C. § 17-703&quot;,
&quot;District of Columbia&quot;, &quot;D.C. Code § 29-707.03&quot;,
&quot;Florida&quot;, &quot;Fla. Stat. § 605.0503&quot;,
&quot;Georgia&quot;, &quot;O.C.G.A. § 14-11-504&quot;,
&quot;Hawaii&quot;, &quot;HRS § 428-504&quot;,
&quot;Idaho&quot;, &quot;Idaho Code § 30-24-703&quot;,
&quot;Illinois&quot;, &quot;805 ILCS 180/30-20&quot;,
&quot;Indiana&quot;, &quot;Burns Ind. Code Ann. § 23-18-6-7&quot;,
&quot;Iowa&quot;, &quot;Iowa Code § 489.503&quot;,
&quot;Kansas&quot;, &quot;K.S.A. § 17-76,113&quot;,
&quot;Kentucky&quot;, &quot;KRS § 275.260&quot;,
&quot;Louisiana&quot;, &quot;La. R.S. § 12:1331&quot;,
&quot;Maine&quot;, &quot;31 M.R.S. § 1573&quot;,
&quot;Maryland&quot;, &quot;Md. CORPORATIONS AND ASSOCIATIONS Code Ann. § 4A-607&quot;,
&quot;Massachusetts&quot;, &quot;ALM GL ch. 156C, § 40&quot;,
&quot;Michigan&quot;, &quot;MCLS § 450.4507&quot;,
&quot;Minnesota&quot;, &quot;Minn. Stat. § 322C.0503&quot;,
&quot;Mississippi&quot;, &quot;Miss. Code Ann. § 79-29-705&quot;,
&quot;Missouri&quot;, &quot;§ 347.119 R.S.Mo.&quot;,
&quot;Montana&quot;, &quot;35-8-705, MCA&quot;,
&quot;Nebraska&quot;, &quot;R.R.S. Neb. § 21-142&quot;,
&quot;Nevada&quot;, &quot;Nev. Rev. Stat. Ann. § 86.401&quot;,
&quot;New Hampshire&quot;, &quot;RSA 304-C:126&quot;,
&quot;New Jersey&quot;, &quot;N.J. Stat. § 42:2C-43&quot;,
&quot;New Mexico&quot;, &quot;N.M. Stat. Ann. § 53-19-35&quot;,
&quot;New York&quot;, &quot;NY CLS LLC § 607&quot;,
&quot;North Carolina&quot;, &quot;N.C. Gen. Stat. § 57D-5-03&quot;,
&quot;North Dakota&quot;, &quot;N.D. Cent. Code, § 10-32.1-45&quot;,
&quot;Ohio&quot;, &quot;ORC Ann. 1705.19&quot;,
&quot;Oklahoma&quot;, &quot;18 Okl. St. § 2034&quot;,
&quot;Oregon&quot;, &quot;ORS § 63.259&quot;,
&quot;Pennsylvania&quot;, &quot;15 Pa.C.S. § 8853&quot;,
&quot;Rhode Island&quot;, &quot;R.I. Gen. Laws § 7-16-37&quot;,
&quot;South Carolina&quot;, &quot;S.C. Code Ann. § 33-44-504&quot;,
&quot;South Dakota&quot;, &quot;S.D. Codified Laws § 47-34A-504&quot;,
&quot;Tennessee&quot;, &quot;Tenn. Code Ann. § 48-249-509&quot;,
&quot;Texas&quot;, &quot;Tex. Business Organizations Code § 101.112&quot;,
&quot;Utah&quot;, &quot;Utah Code Ann. § 48-3a-503&quot;,
&quot;Vermont&quot;, &quot;11 V.S.A. § 4074&quot;,
&quot;Virginia&quot;, &quot;Va. Code Ann. § 13.1-1041.1&quot;,
&quot;Washington&quot;, &quot;Rev. Code Wash. (RCW) § 25.15.256&quot;,
&quot;West Virginia&quot;, &quot;W. Va. Code § 31B-5-504&quot;,
&quot;Wisconsin&quot;, &quot;Wis. Stat. § 183.0705&quot;,
&quot;Wyoming&quot;, &quot;Wyo. Stat. § 17-29-503&quot;,
&quot;-&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CongaLLCChargingOrder</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CongaLLCDoc__c</fullName>
        <formula>CASE( Organization_State__c, 
&quot;Alabama&quot;, $Label.ALDoc,
&quot;Alaska&quot;, $Label.AKDoc,
&quot;Arizona&quot;, $Label.AZDoc, 
&quot;Arkansas&quot;, $Label.ARDoc, 
&quot;California&quot;, $Label.CADoc, 
&quot;Colorado&quot;, $Label.CODoc, 
&quot;Connecticut&quot;, $Label.CTDoc, 
&quot;Delaware&quot;, $Label.DEDoc, 
&quot;District of Columbia&quot;, $Label.DCDoc, 
&quot;Florida&quot;, $Label.FLDoc, 
&quot;Georgia&quot;, $Label.GADoc, 
&quot;Hawaii&quot;, $Label.HIDoc, 
&quot;Idaho&quot;, $Label.IDDoc, 
&quot;Illinois&quot;, $Label.ILDoc, 
&quot;Indiana&quot;, $Label.INDoc, 
&quot;Iowa&quot;, $Label.IADoc, 
&quot;Kansas&quot;, $Label.KSDoc, 
&quot;Kentucky&quot;, $Label.KYDoc, 
&quot;Louisiana&quot;, $Label.LADoc, 
&quot;Maine&quot;, $Label.MEDoc, 
&quot;Maryland&quot;, $Label.MDDoc, 
&quot;Massachusetts&quot;, $Label.MADoc, 
&quot;Michigan&quot;, $Label.MIDoc, 
&quot;Minnesota&quot;, $Label.MNDoc, 
&quot;Mississippi&quot;, $Label.MSDoc, 
&quot;Missouri&quot;, $Label.MODoc, 
&quot;Montana&quot;, $Label.MTDoc, 
&quot;Nebraska&quot;, $Label.NEDoc, 
&quot;Nevada&quot;, $Label.NVDoc, 
&quot;New Hampshire&quot;, $Label.NHDoc, 
&quot;New Jersey&quot;, $Label.NJDoc, 
&quot;New Mexico&quot;, $Label.NMDoc, 
&quot;New York&quot;, $Label.NYDoc, 
&quot;North Carolina&quot;, $Label.NCDOc, 
&quot;North Dakota&quot;, $Label.NDDoc, 
&quot;Ohio&quot;, $Label.OhDoc, 
&quot;Oklahoma&quot;, $Label.OKDoc, 
&quot;Oregon&quot;, $Label.ORDoc, 
&quot;Pennsylvania&quot;, $Label.PADoc, 
&quot;Rhode Island&quot;, $Label.RIDoc, 
&quot;South Carolina&quot;, $Label.SCDoc, 
&quot;South Dakota&quot;, $Label.SDDoc, 
&quot;Tennessee&quot;, $Label.TNDoc, 
&quot;Texas&quot;, $Label.TXDoc, 
&quot;Utah&quot;, $Label.UTDoc, 
&quot;Vermont&quot;, $Label.VTDoc, 
&quot;Virginia&quot;, $Label.VADoc, 
&quot;Washington&quot;, $Label.WADoc, 
&quot;West Virginia&quot;, $Label.WVDoc, 
&quot;Wisconsin&quot;, $Label.WIDoc, 
&quot;Wyoming&quot;, $Label.WIDoc, 
&quot;-&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CongaLLCDoc</label>
        <type>Text</type>
    </fields>
</CustomObject>